ResponsibleParty fullName method return formatted name
fullName method uses familyName and givenName or individualName as a fallback.

Added dcterms prefix to RDF templates.

Fixed up tests

EMC-492